Docker開発環境の構築(mysql含む)

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,10 @@
 default: &default
   adapter: mysql2
   encoding: utf8
+  host: db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: <%= ENV.fetch("MYSQL_PASSWORD") { "root" } %>
   socket: /tmp/mysql.sock
 
 development:
